<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nanoStream</string>
    <string name="action_settings">Settings</string>
    <string name="stream_start">Start</string>
    <string name="stream_stop">Stop</string>
    <string name="title_activity_settings_activtiy">Settings</string>
    <string name="pref_title_resolution">Resolution</string>
    <string name="pref_header_connection">Connection</string>
    <string name="pref_header_video">Video</string>
    <string name="pref_streaming_server">Server</string>
    <string name="pref_streaming_code">Streaming Code</string>
    <string name="pref_title_bitrate">Bitrate</string>
    <string name="pref_title_fps">FPS</string>
    <string name="pref_title_uv">Swap UV-Planes</string>

    <string-array name="pref_bitrate_name">
        <item>100 kBit/s</item>
        <item>300 kBit/s</item>
        <item>400 kBit/s</item>
        <item>500 kBit/s</item>
        <item>600 kBit/s</item>
        <item>800 kBit/s</item>
        <item>1 MBit/s</item>
        <item>1.5 MBit/s</item>
        <item>2 MBit/s</item>
    </string-array>
    <string-array name="pref_bitrate_value">
        <item>100000</item>
        <item>300000</item>
        <item>400000</item>
        <item>500000</item>
        <item>600000</item>
        <item>800000</item>
        <item>1000000</item>
        <item>1500000</item>
        <item>2000000</item>
    </string-array>

    <string name="pref_auth_name">Username</string>
    <string name="pref_auth_passwd">Password</string>
    <string name="pref_header_auth">Authentication</string>
    <string name="pref_value_server">rtmp://ws2.nanocosmos.net/live</string>
    <string name="title_activity_preference">Settings</string>
    <string name="pref_header_advanced">Advanced Settings</string>
    <string name="pref_title_abc_mode">Adaptive Bitrate Mode</string>
    <string-array name="pref_abc_mode_name">
        <item >Disabled</item>
        <item >Quality Degrade Only</item>
        <item >Quality Degrade and Frame Drop</item>
    </string-array>
    <string-array name="pref_abc_mode_value">
        <item >0</item>
        <item >1</item>
        <item >3</item>
    </string-array>

</resources>